17. Added update all operation implementation via batching with bounded batches,
